[gd_scene load_steps=8 format=3 uid="uid://b1aeundxx2iru"]

[ext_resource type="FontFile" uid="uid://drfy77opnvp3b" path="res://Mystery Font.ttf" id="1_i2b0d"]
[ext_resource type="Script" uid="uid://d3wp32ywttypa" path="res://scripts/loading_1.gd" id="1_s40p7"]
[ext_resource type="PackedScene" uid="uid://u3rxnc0qfoau" path="res://scenes/HUD.tscn" id="3_1inv1"]
[ext_resource type="Shader" uid="uid://dha41nql3qnc3" path="res://shaders/PaletteSwap.gdshader" id="4_8ebtf"]
[ext_resource type="Texture2D" uid="uid://1eykuuinqsjs" path="res://characters/mario/playerpalette.png" id="5_qwwpd"]
[ext_resource type="Texture2D" uid="uid://bmjw3of2usx6q" path="res://characters/mario/animations1.png" id="6_hvldw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hkwib"]
shader = ExtResource("4_8ebtf")
shader_parameter/palette = ExtResource("5_qwwpd")
shader_parameter/accessRow = 1

[node name="Node2D" type="Node2D"]
script = ExtResource("1_s40p7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -874.0
offset_top = -16.0
offset_right = 877.0
offset_bottom = 321.0
color = Color(0, 0, 0, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(128, 120)
zoom = Vector2(3, 3)

[node name="LivesLabel" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 120.0
offset_top = 112.0
offset_right = 257.0
offset_bottom = 152.0
theme_override_fonts/normal_font = ExtResource("1_i2b0d")
theme_override_font_sizes/normal_font_size = 8
text = "*  0"

[node name="WorldLabel" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 88.0
offset_top = 80.0
offset_right = 197.0
offset_bottom = 88.0
theme_override_fonts/normal_font = ExtResource("1_i2b0d")
theme_override_font_sizes/normal_font_size = 8
text = "WORLD 0-0"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource("3_1inv1")]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_hkwib")
position = Vector2(105, 105)
texture = ExtResource("6_hvldw")
hframes = 16
vframes = 2

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
